# secp256k1-quantum-circuits

./: .gitignore  CITATION.cff  LICENSE_NOTICE.md  MANIFEST.sha256  Makefile  README.md  REFERENCES.md  RESEARCH_BOUNDARY.md  requirements.txt
artifacts/: README.md
compiler_verification_project/: README.md
compiler_verification_project/zkp_attestation/: Cargo.toml
compiler_verification_project/zkp_attestation/lib/: Cargo.toml
compiler_verification_project/zkp_attestation/lib/src/: lib.rs
compiler_verification_project/zkp_attestation/program/: Cargo.toml
compiler_verification_project/zkp_attestation/program/src/: main.rs
compiler_verification_project/zkp_attestation/script/: Cargo.toml
compiler_verification_project/zkp_attestation/script/src/: core_only.rs  wrap_only.rs
docs/: CAIN_2026_NEUTRAL_ATOM_INTEGRATION.md  CHALLENGE_LADDER.md  CLAIMS_AND_BOUNDARIES.md  COST_MODEL_CORRECTION.md  EXECUTIVE_SUMMARY.md  EXTENDED_VERIFICATION.md  GOOGLE_BASELINE_COMPARISON.md  LITERATURE_INTEGRATION_DECISIONS.md  LOOKUP_FOLDING_RESEARCH_PASS.md  META_ANALYSIS.md  OPTIMIZATION_FRONTIERS.md  PHYSICAL_STACKS_AND_HARDWARE_CONTEXT.md  PUBLICATION_CHECKLIST.md  QUALITY_CONTROL.md  RED_TEAM_REVIEW.md  REPO_LAYOUT.md  STATE_OF_THE_ART_2026.md  STRICT_VERIFICATION.md  TOOLING_AND_REIMPLEMENTATION_PATHS.md
results/: README.md  cain_2026_integration_summary.json  exact_archive_verification_summary.json  literature_matrix.json  physical_stack_reference_points.json  research_pass_summary.json  strict_verification_summary.json
scripts/: compare_cain_2026.py  compare_google_baseline.py  compare_literature.py  compare_lookup_research.py  generate_figures.py  hash_repo.py  rebuild_proof_manifest.py  rebuild_resource_projection.py  refresh_repo.py  release_check.py  run_research_pass.py  run_tests.py  verify_all.py  verify_strict.py
src/: cain_integration.py  common.py  derived_resources.py  extended_verifier.py  (+10 more)
(+142 files in other folders)
