[package]
name = "secp256k1-zkp-attestation-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
