[package]
name = "secp256k1-zkp-attestation-script"
version = "0.1.0"
edition = "2021"
default-run = "secp256k1-zkp-attestation"

[[bin]]
name = "secp256k1-zkp-attestation"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
clap = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
secp256k1-zkp-attestation-lib = { path = "../lib" }
serde_json = { workspace = true }
sp1-core-executor = "6.0.1"
sp1-core-machine = "6.0.1"
sp1-hypercube = "6.0.1"
sp1-jit = "6.0.1"
sp1-primitives = "6.0.1"
sp1-prover = "6.0.1"
sp1-prover-types = "6.0.1"
sp1-recursion-gnark-ffi = "6.0.1"
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
slop-algebra = "6.0.1"
tokio = { version = "1.52.1", features = ["rt", "sync"] }

[build-dependencies]
sp1-build = { version = "6.0.1" }
